añadir herramienta jupyter

--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -250,6 +250,15 @@
       howpublished="\url{https://www.hostinger.es/tutoriales/comando-curl}"
 }
 
+@misc{pagina:Jupyter,
+      author = "{Proyecto Jupyter}",
+      title = "{Jupyter}",
+      year = "2021",
+      howpublished="\url{https://jupyter.org/index.html}"
+}
+
+
+
 @inproceedings{gepperth:hal-01418129,
   TITLE = {{Incremental learning algorithms and applications}},
   AUTHOR = {Gepperth, Alexander and Hammer, Barbara},
