--- a/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/LATEX/tex/4_Tecnicas_y_herramientas.tex
@@ -137,6 +137,12 @@ La herramienta que se ha decidido utilizar para redactar la memoria y los anexos
 \subsubsection{Vim}
 Para la edición de archivos de texto en el servidor de Ubuntu se ha decidido utilizar vim debido a que es un editor que en los sistemas ubuntu ya viene preinstalado además de su gran versatilidad y ligereza.
 
+\subsubsection{Jupyter Notebook}
+
+Es una aplicación cliente-servidor que permite crear y compartir documentos web con formato JSON. Jupyter soporta los lenguajes de programación Julia, Python y R.
+
+En este proyecto se utiliza para documentar las pruebas realizas.\cite{pagina:Jupyter}
+
 \section{Virtualización}
 
 \subsubsection{VirtualBox}
