corrección faltas ortografia

--- a/Documentación/LATEX/tex/1_Introduccion.tex
+++ b/Documentación/LATEX/tex/1_Introduccion.tex
@@ -12,11 +12,11 @@ A lo largo de esta memoria y sus anexos se verá con detalle cómo ha sido el de
 \section{Material adjunto}
 Los materiales que se encuentran adjuntos en la entrega de este proyecto son los siguientes:
 \begin{itemize}
-    \item Máquina virtual ubuntu server con la aplicación ya instalada.
+    \item Máquina virtual Ubuntu Server con la aplicación ya instalada.
     \item Memoria del Trabajo de Fin de Grado más los documentos de anexos.
     \item Script de instalación \textit{install.sh}.
-    \item Paquete debian \textit{Monitorizacion\_IOT\_1.0\_all.seb}.
+    \item Paquete Debian \textit{Monitorizacion\_IOT\_1.0\_all.seb}.
     \item Fichero Jupyter Notebook con las pruebas de regresión realizadas.
-    \item Ficheros con los datasets usados para las pruebas.
+    \item Ficheros con los \textit{datasets} usados para las pruebas.
     \item El código del programa.
 \end{itemize}
