--- a/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -20,6 +20,6 @@ A continuación, se listan algunas de ellas:
         \item Añadir y borrar sensores de manera gráfica.
         \item Poder crear modelos para los sensores de forma intuitiva.
     \end{itemize}
-    \item Guardar metadatos de los sensores que se vayan a introducir en Elasticsaerch como pueden ser el nombre del sensor, localización, etc. 
+    \item Guardar metadatos de los sensores que se vayan a introducir en Elasticsearch como pueden ser el nombre del sensor, localización, etc. 
     \item Mejorar los algoritmos de aprendizaje incremental así cómo añadir nuevos modelos capaces de realizar mejores predicciones.
 \end{itemize}
