--- a/Documentación/LATEX/tex/A_Plan_proyecto.tex
+++ b/Documentación/LATEX/tex/A_Plan_proyecto.tex
@@ -51,12 +51,12 @@ Durante este \textbf{Sprint} se migró Elasticsearch a una máquina Virtual Ubun
 Durante este \textbf{Sprint} se fue estructurando y creando el manual de instalación con lo desarrollado hasta la fecha.
 
 \subsection{Sprint 6 - Conectividad PRTG-ELK (28/03/2021 - 12/04/2021 )}
-En este \textbf{Sprint} se finaliza con la conexión entre PRTG y Elasticsearch, se idea una forma de transformar los datos procedentes de PRTG mediante un sencillo programa en Flex para que los datos sean más fáciles de leer por logstash.
+En este \textbf{Sprint} se finaliza con la conexión entre PRTG y Elasticsearch, se idea una forma de transformar los datos procedentes de PRTG mediante un sencillo programa en Flex para que los datos sean más fáciles de leer por Logstash.
 
 Con los datos obtenidos y almacenados el Elasticsearch se pudo empezar a monitorizar los datos gracias a Kibana
 
 \subsection{Sprint 7 - acercamiento machine learning  (12/04/2021 - 26/04/2021 )}
-En este \textbf{Sprint} se investigó las diferentes librerías y técnicas  
+En este \textbf{Sprint} se investigó las diferentes bibliotecas y técnicas  
 de machine learning y predicción de datos.
 
 \subsection{Sprint 8 (1/05/2021 - 10/05/2021 )}
