--- a/Documentación/LATEX/tex/B_Requisitos.tex
+++ b/Documentación/LATEX/tex/B_Requisitos.tex
@@ -347,7 +347,7 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          
   Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{El sistema se encuentra funcionando.}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Discover}.
   \\\cline{2-3}
@@ -376,7 +376,7 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          
   Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{El sistema se encuentra funcionando.}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Discover}.
   \\\cline{2-3}
@@ -405,7 +405,7 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          
   Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{El sistema se encuentra funcionando.}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Discover}.
   \\\cline{2-3}
@@ -434,7 +434,7 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          
   Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{El sistema se encuentra funcionando.}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Discover}.
   \\\cline{2-3}
@@ -444,7 +444,7 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
         
                                          \\\hline
   Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Se muestran los valores de predicción de los sensores} \\\hline
-  Excepciones                        & \multicolumn{2}{p{10.25cm}}{Elasticsearch no está activo, kibana no esta activo.}\\\hline
+  Excepciones                        & \multicolumn{2}{p{10.25cm}}{Elasticsearch no está activo, Kibana no esta activo.}\\\hline
   Importancia                            & Alta \\\hline
   Urgencia                               & Alta \\
 }
@@ -462,9 +462,9 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          & \multicolumn{2}{p{10.25cm}}{}
                                          \\\hline
                                          
-  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y kibana se encuentran funcionando}   \\\hline
+  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y Kibana se encuentran funcionando}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Discover}.
   \\\cline{2-3}
@@ -493,9 +493,9 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          & \multicolumn{2}{p{10.25cm}}{RF-9.1, RF-9.2, RF-9.3}
                                          \\\hline
                                          
-  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y kibana se encuentran funcionando}   \\\hline
+  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y Kibana se encuentran funcionando}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Dashboards}.
 
@@ -519,9 +519,9 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          & \multicolumn{2}{p{10.25cm}}{}
                                          \\\hline
                                          
-  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y kibana se encuentran funcionando}   \\\hline
+  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y Kibana se encuentran funcionando}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Dashboards}.
   \\\cline{2-3}
@@ -554,9 +554,9 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          & \multicolumn{2}{p{10.25cm}}{}
                                          \\\hline
                                          
-  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y kibana se encuentran funcionando}   \\\hline
+  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y Kibana se encuentran funcionando}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Dashboards}.
   \\\cline{2-3}
@@ -586,9 +586,9 @@ En esta aplicación interactúan dos actores, los sensores de los que se captan 
                                          & \multicolumn{2}{p{10.25cm}}{}
                                          \\\hline
                                          
-  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y kibana se encuentran funcionando}   \\\hline
+  Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Elasticsearch y Kibana se encuentran funcionando}   \\\hline
   \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-                                         & 1    & El usuario accede a la url de kibana.
+                                         & 1    & El usuario accede a la url de Kibana.
   \\\cline{2-3}
                                          & 2    & El usuario accede al apartado \textit{Dashboards}.
   \\\cline{2-3}
