--- a/Documentación/LATEX/tex/D_Manual_programador.tex
+++ b/Documentación/LATEX/tex/D_Manual_programador.tex
@@ -57,16 +57,16 @@ Para la realización de este proyecto se necesita tener instalados los siguiente
 \begin{itemize}
     \item Python 3: versión 3.8.10 
     \item Elasticsearch: versión 7.4
-    \item kibana: versión 7.14.1
-    \item logstash: versión 7.14.1
-    \item openjdk-11-jre-headless: versión 11.0.11
+    \item Kibana: versión 7.14.1
+    \item Logstash: versión 7.14.1
+    \item Openjdk-11-jre-headless: versión 11.0.11
 \end{itemize}
-Librerías python:
+bibliotecas python:
 \begin{itemize}
-    \item river versión 0.71
-    \item pandas: versión 1.3.2
+    \item River versión 0.71
+    \item Pandas: versión 1.3.2
     \item Elasticsearch: versión 7.14.0
-    \item numpy: versión 1.21.2
+    \item Numpy: versión 1.21.2
 \end{itemize}
 
 \subsection{Archivos}
@@ -79,7 +79,7 @@ A continuación, se mostrarán todos los ficheros que conforman el programa así
     
     \item \textbf{/Gestion\_datos/Borrar\_datos\_predicciones.sh}: Debido a que para cada sensor se repite la predicción cada minuto y se suben los resultados a Elasticsearch es necesario borrar la predicción anterior para que siempre se pueda visualizar la predicción actualizada, este script hace exactamente eso.
     
-    \item \textbf{/Gestion\_datos/Load\_sensor\_data.sh}: Este script se encarga de enviar línea por línea de un fichero a logstash para poder ser enviado a Elasticsearch.
+    \item \textbf{/Gestion\_datos/Load\_sensor\_data.sh}: Este script se encarga de enviar línea por línea de un fichero a Logstash para poder ser enviado a Elasticsearch.
     
     \item \textbf{/Gestion\_datos/Extractor.py}: En este fichero se encuentra la clase encargada de la descarga de datos de Elasticsearch.
     
@@ -101,7 +101,7 @@ A continuación, se mostrarán todos los ficheros que conforman el programa así
         \item \textbf{ENTRENAMIENTO}:Corresponde al valor del entrenamiento.
     \end{itemize}
     
-    \item \textbf{/Utilidades/Generador\_lineas.py}: En este fichero se encuentra la clase encargada de generar las líneas de texto en un formato específico para poder ser procesadas por logstash. 
+    \item \textbf{/Utilidades/Generador\_lineas.py}: En este fichero se encuentra la clase encargada de generar las líneas de texto en un formato específico para poder ser procesadas por Logstash. 
     
     \item \textbf{/Utilidades/Tratamiento\_sensor\_data.py}: En este fichero se encuentra la clase encargada de tratar con los datos de los sensores, permite leer ficheros JSON y transformarlos.
     
@@ -111,9 +111,9 @@ A continuación, se mostrarán todos los ficheros que conforman el programa así
 
 \subsection{Modelos}
 
-La librería de Python, River, facilita dos tipos de modelos para series temporales permitiendo realizar el entrenamiento de manera incremental con un data stream procedente de los sensores así cómo realizar una predicción de su comportamiento.
+La biblioteca de Python, River, facilita dos tipos de modelos para series temporales permitiendo realizar el entrenamiento de manera incremental con un data stream procedente de los sensores así cómo realizar una predicción de su comportamiento.
 
-Pese a que solo estén implementados en la aplicación dos tipos de modelos está preparada para que se pueda implementar nuevos tipos de modelos de diversas librerías.
+Pese a que solo estén implementados en la aplicación dos tipos de modelos está preparada para que se pueda implementar nuevos tipos de modelos de diversas bibliotecas.
 
 \subsubsection{Implementar nuevos modelos}
 
@@ -153,15 +153,15 @@ dpkg-reconfigure tzdata
 
 \subsection{Instalación \nombrePrograma}
 
-Una vez instalado y configurado Ubuntu server en una máquina virtual se puede proceder a la instalación de \nombrePrograma. Para ello es necesario tener descargado del repositorio \url{https://github.com/dmh1001/TFG-Monitorizacion-IOT} tanto el script \textit{install.sh} cómo el paquete debian \textit{MonitorizacionIOT\_1.0\_all.deb}. Importante, a la hora de instalar el programa ambos ficheros se han de encontrar en un mismo directorio. 
+Una vez instalado y configurado Ubuntu Server en una máquina virtual se puede proceder a la instalación de \nombrePrograma. Para ello es necesario tener descargado del repositorio \url{https://github.com/dmh1001/TFG-Monitorizacion-IOT} tanto el script \textit{install.sh} cómo el paquete Debian \textit{MonitorizacionIOT\_1.0\_all.deb}. Importante, a la hora de instalar el programa ambos ficheros se han de encontrar en un mismo directorio. 
 
-Una vez se tenga estos ficheros en la máquina virtual se podrá comenzar la instalación, para mayor comodidad, asegurarse que se accede con el usuario root, para ello se puede utilizar el siguiente comando:
+Una vez se tenga estos ficheros en la máquina virtual se podrá comenzar la instalación, para mayor comodidad, asegurarse que se accede con el usuario \textit{root}, para ello se puede utilizar el siguiente comando:
 
 \begin{lstlisting}[frame=single] 
 sudo su
 \end{lstlisting}
 
-Para instalar el programa y sus dependencias sólo es necesario ejecutar el script \textit{install.sh} que instalará una serie de paquetes, cómo son Elasticsearch, logstash, kibana, librerías de Python y el propio programa. 
+Para instalar el programa y sus dependencias sólo es necesario ejecutar el script \textit{install.sh} que instalará una serie de paquetes, cómo son Elasticsearch, Logstash, Kibana, bibliotecas de Python y el propio programa. 
 
 \begin{lstlisting}[frame=single] 
 bash install.sh
@@ -212,8 +212,8 @@ El instalador se encarga de instalar el paquete Debian que contiene los archivos
 
 \subsubsection{Configuraciones}
 
-El script también se encarga de configurar Elasticsearch, kibana y logstash así cómo iniciar los servicios.
-Tras instalarse el paquete se realizan una serie de configuraciones sobre los servicios de Elasticsearch y kibana, estás se hacen automáticamente si necesidad de la supervisión del usuario.
+El script también se encarga de configurar Elasticsearch, Kibana y Logstash así cómo iniciar los servicios.
+Tras instalarse el paquete se realizan una serie de configuraciones sobre los servicios de Elasticsearch y Kibana, estás se hacen automáticamente si necesidad de la supervisión del usuario.
 
 \textbf{Elasticsearch}
 
@@ -221,18 +221,18 @@ Se configura el archivo que se encuentra en la ruta:
 
 /etc/elasticsearch/elasticsearch.yml
 
-\textbf{kibana}
+\textbf{Kibana}
 
 El archivo de configuración se encuentra en la ruta:
 
 /etc/kibana/kibana.yml
  
-Se crea una carpeta y se le añaden permisos para guardar los logs que kibana genere.
+Se crea una carpeta y se le añaden permisos para guardar los logs que Kibana genere.
  
 \begin{lstlisting}[frame=single]  
 
 mkdir /var/log/kibana
-chown -R kibana:kibana /var/log/kibana/
+chown -R Kibana:kibana /var/log/kibana/
 
 \end{lstlisting}
  
@@ -249,24 +249,23 @@ chown -R kibana:kibana /var/log/kibana/
 \end{lstlisting}
  
  
- \textbf{kibana}
+ \textbf{Kibana}
  
  \begin{lstlisting}[frame=single]  
-systemctl daemon-reload && systemctl enable kibana
+systemctl daemon-reload && systemctl enable Kibana
 systemctl start kibana
 \end{lstlisting}
  
-\textbf{logstash}
+\textbf{Logstash}
  
 \begin{lstlisting}[frame=single] 
-systemctl daemon-reload && systemctl enable logstash
+systemctl daemon-reload && systemctl enable Logstash
 systemctl start logstash
 
 \end{lstlisting}
  
  Este es el último paso que realiza el instalador, a partir de aquí el resto de la configuración corre a cargo del usuario.
  
-
 \subsection{Comprobación de procesos}
 
 Es importante comprobar que los procesos funciones con normalidad y que estos estén activos 
@@ -285,8 +284,8 @@ Si resulta que alguno de los componentes no se encuentra activos podemos reinici
 systemctl restart Monitorizacion_IOT
 
 systemctl restart elasticsearh
-systemctl restart kibana
-systemctl restart logstash
+systemctl restart Kibana
+systemctl restart Logstash
 \end{lstlisting}
 
 \section{Pruebas del sistema}
@@ -297,7 +296,7 @@ A la hora realizar predicciones es extremadamente importante saber cómo de fiab
 
 
 \subsubsection{Datasets}
-Debido a que no se posee históricos de los datos de los sensores y ya que PRTG sólo recopila datos cuando está conectado en un equipo en funcionamiento, los datasets empleados para realizar las pruebas no son lo suficientemente extensos cómo para entrenar el modelo y que saque predicciones fidedignas. 
+Debido a que no se posee históricos de los datos de los sensores y ya que PRTG sólo recopila datos cuando está conectado en un equipo en funcionamiento, los \textit{datasets} empleados para realizar las pruebas no son lo suficientemente extensos cómo para entrenar el modelo y que saque predicciones fidedignas. 
 
 Por ello, se realizarán las pruebas con datos recogidos en intervalos de varias de horas y se comprobará cómo se comporta el algoritmo a corto plazo.
 
@@ -443,7 +442,7 @@ recopilados de siete días distintos,
 \clearpage
 \subsubsection{Pruebas con conjuntos de datos más grandes}
 Para probar cómo funcionaría el modelo con un conjunto de datos más amplio, de cinco meses.
-Se ha descargado de la página web kaggle un dataset que recoge datos procedentes de varios sensores de una bomba de agua. \url{https://www.kaggle.com/nphantawee/pump-sensor-data} 
+Se ha descargado de la página web kaggle un \textit{dataset} que recoge datos procedentes de varios sensores de una bomba de agua. \url{https://www.kaggle.com/nphantawee/pump-sensor-data} 
 
 \begin{figure}[h]
 	\centering
@@ -476,4 +475,4 @@ dataset4 & 130.277 & 11.414 & 7.697 & -0.428\\\hline
 \textbf{Media}          & \textbf{34.123} & \textbf{3.923} & \textbf{2.724} & \textbf{-0.221}\\
 } 
 
-Cómo se puede observar, las pruebas no han sido satisfactorias, al entrenar un dataset con un conjunto de datos más amplio los resultados obtenidos no muestran que se haya aplicado un aprendizaje en el momento en el que el modelo deja de entrenar para únicamente predecir.
+Cómo se puede observar, las pruebas no han sido satisfactorias, al entrenar un \textit{dataset} con un conjunto de datos más amplio los resultados obtenidos no muestran que se haya aplicado un aprendizaje en el momento en el que el modelo deja de entrenar para únicamente predecir.
